Fix: Fix scrollbar moving with text-error dynamically

--- a/vite-project/src/profile/components/MainBody.module.scss
+++ b/vite-project/src/profile/components/MainBody.module.scss
@@ -3,6 +3,8 @@
 }
 .main-container {
   display: flex;
+  position: relative;
+  top: 100px;
 }
 .mainbody-section {
   width: 90%;
