--- a/vite-project/src/profile/components/ProfileHeader.module.scss
+++ b/vite-project/src/profile/components/ProfileHeader.module.scss
@@ -1,5 +1,6 @@
 .main-profile {
   display: flex;
+  position: fixed;
   width: 100%;
   z-index: 100;
   justify-content: space-around;
